src/BackEnd/Language/Parser.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/
(function(root) {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { INIT: peg$parseINIT };
  var peg$startRuleFunction = peg$parseINIT;

  var peg$c0 = "return";
  var peg$c1 = ";";
  var peg$c2 = "continue";
  var peg$c3 = "break";
  var peg$c4 = "=";
  var peg$c5 = "var";
  var peg$c6 = "if";
  var peg$c7 = "(";
  var peg$c8 = ")";
  var peg$c9 = "else";
  var peg$c10 = "switch";
  var peg$c11 = "{";
  var peg$c12 = "}";
  var peg$c13 = "case";
  var peg$c14 = ":";
  var peg$c15 = "default";
  var peg$c16 = "while";
  var peg$c17 = "+=";
  var peg$c18 = "-=";
  var peg$c19 = "*=";
  var peg$c20 = "/=";
  var peg$c21 = "%=";
  var peg$c22 = "++";
  var peg$c23 = "--";
  var peg$c24 = "[";
  var peg$c25 = "]";
  var peg$c26 = "System.out.println";
  var peg$c27 = ",";
  var peg$c28 = "int";
  var peg$c29 = "float";
  var peg$c30 = "string";
  var peg$c31 = "boolean";
  var peg$c32 = "char";
  var peg$c33 = "?";
  var peg$c34 = "||";
  var peg$c35 = "&&";
  var peg$c36 = "!";
  var peg$c37 = "==";
  var peg$c38 = "!=";
  var peg$c39 = "<=";
  var peg$c40 = ">=";
  var peg$c41 = "-";
  var peg$c42 = "true";
  var peg$c43 = "false";
  var peg$c44 = ".";
  var peg$c45 = "'";
  var peg$c46 = "\"";
  var peg$c47 = "//";

  var peg$r0 = /^[<>]/;
  var peg$r1 = /^[+\-]/;
  var peg$r2 = /^[%*\/]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[^\n"\\]/;
  var peg$r5 = /^[\\]/;
  var peg$r6 = /^[_]/;
  var peg$r7 = /^[a-zA-Z]/;
  var peg$r8 = /^[a-zA-Z0-9_]/;
  var peg$r9 = /^[^\r\n]/;
  var peg$r10 = /^[\n]/;
  var peg$r11 = /^[\/]/;
  var peg$r12 = /^[*]/;
  var peg$r13 = /^[^*]/;
  var peg$r14 = /^[^\/*]/;
  var peg$r15 = /^[ \t\r\n]/;

  var peg$e0 = peg$literalExpectation("return", false);
  var peg$e1 = peg$literalExpectation(";", false);
  var peg$e2 = peg$literalExpectation("continue", false);
  var peg$e3 = peg$literalExpectation("break", false);
  var peg$e4 = peg$literalExpectation("=", false);
  var peg$e5 = peg$literalExpectation("var", false);
  var peg$e6 = peg$literalExpectation("if", false);
  var peg$e7 = peg$literalExpectation("(", false);
  var peg$e8 = peg$literalExpectation(")", false);
  var peg$e9 = peg$literalExpectation("else", false);
  var peg$e10 = peg$literalExpectation("switch", false);
  var peg$e11 = peg$literalExpectation("{", false);
  var peg$e12 = peg$literalExpectation("}", false);
  var peg$e13 = peg$literalExpectation("case", false);
  var peg$e14 = peg$literalExpectation(":", false);
  var peg$e15 = peg$literalExpectation("default", false);
  var peg$e16 = peg$literalExpectation("while", false);
  var peg$e17 = peg$literalExpectation("+=", false);
  var peg$e18 = peg$literalExpectation("-=", false);
  var peg$e19 = peg$literalExpectation("*=", false);
  var peg$e20 = peg$literalExpectation("/=", false);
  var peg$e21 = peg$literalExpectation("%=", false);
  var peg$e22 = peg$literalExpectation("++", false);
  var peg$e23 = peg$literalExpectation("--", false);
  var peg$e24 = peg$literalExpectation("[", false);
  var peg$e25 = peg$literalExpectation("]", false);
  var peg$e26 = peg$literalExpectation("System.out.println", false);
  var peg$e27 = peg$literalExpectation(",", false);
  var peg$e28 = peg$literalExpectation("int", false);
  var peg$e29 = peg$literalExpectation("float", false);
  var peg$e30 = peg$literalExpectation("string", false);
  var peg$e31 = peg$literalExpectation("boolean", false);
  var peg$e32 = peg$literalExpectation("char", false);
  var peg$e33 = peg$literalExpectation("?", false);
  var peg$e34 = peg$literalExpectation("||", false);
  var peg$e35 = peg$literalExpectation("&&", false);
  var peg$e36 = peg$literalExpectation("!", false);
  var peg$e37 = peg$literalExpectation("==", false);
  var peg$e38 = peg$literalExpectation("!=", false);
  var peg$e39 = peg$literalExpectation("<=", false);
  var peg$e40 = peg$literalExpectation(">=", false);
  var peg$e41 = peg$classExpectation(["<", ">"], false, false);
  var peg$e42 = peg$classExpectation(["+", "-"], false, false);
  var peg$e43 = peg$classExpectation(["%", "*", "/"], false, false);
  var peg$e44 = peg$literalExpectation("-", false);
  var peg$e45 = peg$literalExpectation("true", false);
  var peg$e46 = peg$literalExpectation("false", false);
  var peg$e47 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e48 = peg$literalExpectation(".", false);
  var peg$e49 = peg$literalExpectation("'", false);
  var peg$e50 = peg$classExpectation(["\n", "\"", "\\"], true, false);
  var peg$e51 = peg$classExpectation(["\\"], false, false);
  var peg$e52 = peg$anyExpectation();
  var peg$e53 = peg$literalExpectation("\"", false);
  var peg$e54 = peg$classExpectation(["_"], false, false);
  var peg$e55 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e56 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e57 = peg$literalExpectation("//", false);
  var peg$e58 = peg$classExpectation(["\r", "\n"], true, false);
  var peg$e59 = peg$classExpectation(["\n"], false, false);
  var peg$e60 = peg$classExpectation(["/"], false, false);
  var peg$e61 = peg$classExpectation(["*"], false, false);
  var peg$e62 = peg$classExpectation(["*"], true, false);
  var peg$e63 = peg$classExpectation(["/", "*"], true, false);
  var peg$e64 = peg$otherExpectation("whitespace");
  var peg$e65 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false);

  var peg$f0 = function(i) {return i};
  var peg$f1 = function(i) {return i};
  var peg$f2 = function(i) {return i};
  var peg$f3 = function(i) {return i};
  var peg$f4 = function(i) {return i};
  var peg$f5 = function(i) {return i};
  var peg$f6 = function(i) {return i};
  var peg$f7 = function(e) {return new Return(location().start.line, location().start.column, e)};
  var peg$f8 = function() {return new Continue(location().start.line, location().start.column) };
  var peg$f9 = function() {return new Break(location().start.line, location().start.column)    };
  var peg$f10 = function(t, id, v) {return new InitVar(location().start.line, location().start.column, id, t, v ? v[2] : v)};
  var peg$f11 = function(id, v) {return new InitVar(location().start.line, location().start.column, id, null, v)        };
  var peg$f12 = function(cn, b1, b2) {return new If(location().start.line, location().start.column, cn, b1, b2 ? b2[3] : b2)};
  var peg$f13 = function(exp, b) {return new Switch(location().start.line, location().start.column, exp, b[0], b[1])};
  var peg$f14 = function(c, d) {return [c.map((v) => v[1]), d]};
  var peg$f15 = function(exp, i) {return new Case(location().start.line, location().start.column, exp, new Block(location().start.line, location().start.column, i))};
  var peg$f16 = function(exp, b) {return new Case(location().start.line, location().start.column, exp, b)                                                           };
  var peg$f17 = function(i) {return new Block(location().start.line, location().start.column, i)};
  var peg$f18 = function(b) {return b                                                           };
  var peg$f19 = function(exp, b) {return new While(location().start.line, location().start.column, exp, b)};
  var peg$f20 = function(id, s, e) {return new AssignComp(id.line, id.column, id, s, e)};
  var peg$f21 = function(id, e) {return new Assign(id.line, id.column, id, e)       };
  var peg$f22 = function(id, s) {return new IncDec(id.line, id.column, id, s)       };
  var peg$f23 = function(id, p) {return new IDPos(location().start.line, location().start.column, id, p.map((v) => v[3]))};
  var peg$f24 = function(e) {return new Print(location().start.line, location().start.column, e ? [e[0], ... e[1].map((v) => v[3])] : [])};
  var peg$f25 = function(i) {return new Block(location().start.line, location().start.column, i)};
  var peg$f26 = function(t, v) {return new DataType(v.length > 0 ? Type.VECTOR : t, v.length > 0 ? t : null, v.length)};
  var peg$f27 = function() {return Type.INT    };
  var peg$f28 = function() {return Type.FLOAT  };
  var peg$f29 = function() {return Type.STRING };
  var peg$f30 = function() {return Type.BOOLEAN};
  var peg$f31 = function() {return Type.CHAR   };
  var peg$f32 = function(e1, e2, e3) {return new Ternary(location().start.line, location().start.column, e1, e2, e3)};
  var peg$f33 = function(e1) {return e1};
  var peg$f34 = function(e1, e2) {return e2.reduce((res, op) => new Logic(location().start.line, location().start.column, res, op[1], op[3]), e1)};
  var peg$f35 = function(e1, e2) {return e2.reduce((res, op) => new Logic(location().start.line, location().start.column, res, op[1], op[3]), e1)};
  var peg$f36 = function(s, e1) {return new Logic(location().start.line, location().start.column, null, s, e1)};
  var peg$f37 = function(e) {return e};
  var peg$f38 = function(e1, e2) {return e2.reduce((res, op) => new Relational(location().start.line, location().start.column, res, op[1], op[3]), e1)};
  var peg$f39 = function(e1, e2) {return e2.reduce((res, op) => new Relational(location().start.line, location().start.column, res, op[1], op[3]), e1)};
  var peg$f40 = function(e1, e2) {return e2.reduce((res, op) => new Arithmetic(location().start.line, location().start.column, res, op[1], op[3]), e1)};
  var peg$f41 = function(e1, e2) {return e2.reduce((res, op) => new Arithmetic(location().start.line, location().start.column, res, op[1], op[3]), e1)};
  var peg$f42 = function(s, exp) {return new Arithmetic(location().start.line, location().start.column, null, s, exp)};
  var peg$f43 = function(exp) {return exp};
  var peg$f44 = function(p) {return new Primitive(location().start.line, location().start.column, p, Type.FLOAT)  };
  var peg$f45 = function(p) {return new Primitive(location().start.line, location().start.column, p, Type.INT)    };
  var peg$f46 = function(p) {return new Primitive(location().start.line, location().start.column, p, Type.CHAR)   };
  var peg$f47 = function(p) {return new Primitive(location().start.line, location().start.column, p, Type.STRING) };
  var peg$f48 = function() {return new Primitive(location().start.line, location().start.column, p, Type.BOOLEAN)};
  var peg$f49 = function() {return new Primitive(location().start.line, location().start.column, p, Type.BOOLEAN)};
  var peg$f50 = function(e) {return e};
  var peg$f51 = function(e) {return e};
  var peg$f52 = function(id, p) {return new AccessVar(location().start.line, location().start.column, new IDPos(location().start.line, location().start.column, id, p.map((v) => v[3])))};
  var peg$f53 = function() {return text()};
  var peg$f54 = function() {return text()};
  var peg$f55 = function() {return text().substring(1, text().length - 1)};
  var peg$f56 = function() {return text().substring(1, text().length - 1)};
  var peg$f57 = function() {return text()};
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseINIT() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseINSTRUCCION();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseINSTRUCCION();
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseINSTRUCCION() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseINITVAR();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      s2 = peg$parseIF();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f2(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        s2 = peg$parseSWITCH();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f3(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parse_();
          s2 = peg$parseWHILE();
          if (s2 !== peg$FAILED) {
            s3 = peg$parse_();
            peg$savedPos = s0;
            s0 = peg$f4(s2);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parse_();
            s2 = peg$parseASSIGN();
            if (s2 !== peg$FAILED) {
              s3 = peg$parse_();
              peg$savedPos = s0;
              s0 = peg$f5(s2);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parse_();
              s2 = peg$parsePRINT();
              if (s2 !== peg$FAILED) {
                s3 = peg$parse_();
                peg$savedPos = s0;
                s0 = peg$f6(s2);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parse_();
                if (input.substr(peg$currPos, 6) === peg$c0) {
                  s2 = peg$c0;
                  peg$currPos += 6;
                } else {
                  s2 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e0); }
                }
                if (s2 !== peg$FAILED) {
                  s3 = peg$parse_();
                  s4 = peg$parseEXP();
                  if (s4 === peg$FAILED) {
                    s4 = null;
                  }
                  s5 = peg$parse_();
                  if (input.charCodeAt(peg$currPos) === 59) {
                    s6 = peg$c1;
                    peg$currPos++;
                  } else {
                    s6 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e1); }
                  }
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parse_();
                    peg$savedPos = s0;
                    s0 = peg$f7(s4);
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parse_();
                  if (input.substr(peg$currPos, 8) === peg$c2) {
                    s2 = peg$c2;
                    peg$currPos += 8;
                  } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e2); }
                  }
                  if (s2 !== peg$FAILED) {
                    s3 = peg$parse_();
                    if (input.charCodeAt(peg$currPos) === 59) {
                      s4 = peg$c1;
                      peg$currPos++;
                    } else {
                      s4 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e1); }
                    }
                    if (s4 !== peg$FAILED) {
                      s5 = peg$parse_();
                      peg$savedPos = s0;
                      s0 = peg$f8();
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = peg$parse_();
                    if (input.substr(peg$currPos, 5) === peg$c3) {
                      s2 = peg$c3;
                      peg$currPos += 5;
                    } else {
                      s2 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e3); }
                    }
                    if (s2 !== peg$FAILED) {
                      s3 = peg$parse_();
                      if (input.charCodeAt(peg$currPos) === 59) {
                        s4 = peg$c1;
                        peg$currPos++;
                      } else {
                        s4 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e1); }
                      }
                      if (s4 !== peg$FAILED) {
                        s5 = peg$parse_();
                        peg$savedPos = s0;
                        s0 = peg$f9();
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseINITVAR() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
